<resources>
    <string name="app_name">Stocks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="already_have_an_account_log_in"><u>Already have an account? Log in</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="log_in">Log In</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_market">Market</string>
    <string name="top_up">Top up</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_image">Profile image</string>
    <string name="submit">Submit</string>
    <string name="change_name">Change name:</string>
    <string name="change_login">Change login:</string>
    <string name="change_profile_photo">Change profile photo:</string>
    <string name="change_mail">Change mail:</string>
    <string name="change_birthday">Change birthday:</string>
    <string name="change_password"><u>Change password</u></string>
    <string name="mail">Mail</string>
    <string name="back_to_registration_page"><u>Go to registration page</u></string>
    <string name="obligation_name">Obligation name</string>
    <string name="maturity_date_of_the_bond">Maturity of the bond</string>
    <string name="your_balance">Your balance:</string>
    <string name="current_date">Current date:</string>
    <string name="dollar_symbol">$</string>
    <string name="price">price</string>
    <string name="coupon">Coupon</string>
</resources>