<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_market">

    <fragment
        android:id="@+id/nav_market"
        android:name="com.example.stocks.ui.market.MarketFragment"
        android:label="@string/menu_market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/nav_change_profile"
        android:name="com.example.stocks.ui.edit_profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_top_up"
        android:name="com.example.stocks.ui.top_up.TopUpFragment"
        android:label="@string/top_up"
        tools:layout="@layout/fragment_top_up" />
</navigation>