<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/log_in_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/log_in"
        android:textSize="40sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_in_main_text"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/login"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_login"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_login"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/selector_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/back_to_registration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/back_to_registration_page"
        android:textColor="@color/selector_txt"
        android:textSize="16sp" />

</RelativeLayout>