<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit_profile.EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/edit_profile_name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/change_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/edit_profile_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_name_textView"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_profile_name_editView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:inputType="textPersonName"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/edit_profile_name_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/submit" />
            </LinearLayout>

            <TextView
                android:id="@+id/edit_profile_login_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_profile_name_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/change_login"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/edit_profile_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_login_textView"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_profile_login_editView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:inputType="textPersonName"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/edit_profile_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/submit" />
            </LinearLayout>

            <TextView
                android:id="@+id/edit_profile_profile_photo_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_profile_login_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/change_profile_photo"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/edit_profile_profile_photo_imageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_below="@id/edit_profile_profile_photo_textView"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"/>

            <Button
                android:id="@+id/edit_profile_profile_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_profile_photo_imageView"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/edit_profile_mail_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_profile_profile_image_button"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/change_mail"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/edit_profile_mail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_mail_textView"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_profile_mail_editView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/edit_profile_mail_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/submit" />
            </LinearLayout>

            <TextView
                android:id="@+id/edit_profile_birthday_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_profile_mail_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/change_birthday"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/edit_profile_birthday_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_birthday_textView"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_profile_birthday_editView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:clickable="true"
                    android:textSize="18sp"
                    android:focusable="false"
                    android:editable="false"/>

                <Button
                    android:id="@+id/edit_profile_birthday_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/submit" />
            </LinearLayout>

            <TextView
                android:id="@+id/change_password_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_profile_birthday_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/change_password"
                android:textColor="@color/selector_txt"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>